Prevent duplicate routes and add deletion
